<resources>
    <string name="app_name">优影视</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="title_xiaoshuo">Novel</string>
    <string name="title_vipshipin">Video</string>
    <string name="title_news">News</string>
    <string name="title_youhuijuan">Coupon</string>
    <string name="title_me">Me</string>

    <string name="title_video_vip">Video</string>
    <string name="title_video_tv">Tv</string>


    <string name="title_xiaoshuo_bookshelf">bookshelf</string>
    <string name="title_xiaoshuo_hot">Hot</string>
    <string name="title_xiaoshuo_Categories">Categories</string>

    <string name="title_video_vip_label">Vip</string>
    <string name="title_other_vip_label">Others</string>
    <string name="title_video_vip_tips">The following videos are free of charge,Please do not use them for business purposes.</string>


    <string name="title_yangshi_label">TV Online</string>

    <string name="me_title_one">No permanent \n VIP login</string>
    <string name="me_title_two">The first no-login, permanent VIP, set free novels, VIP mainstream video website, high TV
                                Clear live broadcast, news reading, coupon receipt, extreme experience app.</string>
    <string name="me_title_three">Sponsor the siege lion</string>
    <string name="sponsor_weixin">WeChat</string>
    <string name="sponsor_alipay">alipay</string>
    <string name="sponsor_friendly_reminder">Click the qr code to start sponsoring \n your meal, which is the motivation for us to continue to create the best experience</string>
    <string name="sponsor_label">Siege lion: hollow eagle, village boy</string>


    <string name="vip_video_play_tips">Click Play</string>
    <string name="video_close">Close</string>
    <string name="video_play">Play</string>
    <string name="Replace_line">Line</string>
    <string name="refresh">refresh</string>
    <string name="check_network">Check Network</string>
    <string name="updata_title">Updata</string>
    <string name="updata_conten">【体验新升级】修复已知BUG，追剧观影流畅加倍。</string>
    <string name="play_hint">播放提示：如果无法播放，在右上角切换线路。</string>
</resources>
