<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/me_title_three"
        style="@style/MeTitleStyle"
        />
    <LinearLayout
        android:layout_marginTop="@dimen/sponsor_title_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_height="wrap_content"
            android:text="@string/sponsor_weixin"
            style="@style/QrCodeStyle"
            />
        <TextView
            android:layout_height="wrap_content"
            android:text="@string/sponsor_alipay"
            style="@style/QrCodeStyle"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/wechat_qr"
            style="@style/QrCodeStyle"
            android:src="@drawable/we_chat"
            />
        <ImageView
            android:id="@+id/alipay_qr"
            style="@style/QrCodeStyle"
            android:src="@drawable/alipay"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="@dimen/sponsor_letter_spacing"
            android:text="@string/sponsor_friendly_reminder"
            style="@style/MeTitleTwoStyle"
            />
        <TextView
            android:layout_marginTop="@dimen/sponsor_label_letter_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sponsor_label"
            android:gravity="end"
            android:textColor="@color/sponsor_label"
            android:textSize="@dimen/sponsor_label_size"
            android:layout_marginRight="@dimen/sponsor_label_margin_right"
            />
    </LinearLayout>
</LinearLayout>